fix : z-index on the background fixed

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -133,20 +133,19 @@ input[type="radio"]:checked + label {
     padding: 1rem;
     width: 64px;
     height: 64px;
-    z-index: -1;
     align-self: end;
     position: relative;
 }
 
 .card {    
+    background-color: lightblue;
     border-radius: 1rem;
-    border: 1px solid;
+    border: 1px  solid;
     display: flex;
     flex-direction: column;
     justify-content: space-between;    
-    position: relative;  
+    position: relative;
     transition: all 2s;
-
 }
 
 .card .detail{   
@@ -156,6 +155,7 @@ input[type="radio"]:checked + label {
     background-color: var(--all-card-background-color);
     border-radius: 1rem;
     color: white;
+    z-index: 1
 }
 
 .card .detail .item-title {
